--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,6 @@ overflow: hidden;
 padding: var(--pading-container);
 }
 
-
 .hero{
     width: 100%;
     height: 100vh;
@@ -91,7 +90,7 @@ padding: var(--pading-container);
 .nav__items{
     list-style: none;
 }
-
+    
 .nav__link{
     margin-left: auto;
     padding: 0;
@@ -159,23 +158,26 @@ padding: var(--pading-container);
 }
 
 .knowledge{
-    background-color: #1d3f20;
-    background-image:  radial-gradient(#1d3f20 0.5px, transparent 0.5px), radial-gradient(#1d3f20 0.5px, #1d3f20 0.5px);
+    background-color: #019b0e; 
     background-size: 20px 20px;
-    background-position: 0 0,10px 10px;
+  
     overflow: hidden;
 }
 
+.knowledge__texts .subtitle{
+    color: #fff;
+}
+
 .knowledge__container{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
+    justify-content: center;
     gap: 1em;
     align-items: center;
+    color: #fff;
 }
 
 .knowledge__picture{
-    max-width: 500px;
-
+    max-width: 300px;
 }
 
 .knowledge__paragraph{
@@ -184,8 +186,11 @@ padding: var(--pading-container);
 }
 
 .knowledge__img{
-    width: 100%;
+    width: 90%;
     display: block;
+    margin: 50% ;
+
+
 }
 
 .price{
@@ -193,12 +198,18 @@ padding: var(--pading-container);
 }
 
 .price__table{
-    padding-top: 60px;
-    display: flex;
+    padding-top:30px;
+    display:flex;
     flex-wrap: wrap;
-    gap: 2.5em;
+    gap: 2em;
     justify-content: space-evenly;
     align-items: center;
+   
+}
+
+.price__table img{
+    width: 100%;
+    object-fit: cover
 }
 
 .price__element{
@@ -215,12 +226,6 @@ padding: var(--pading-container);
     --bg-cta:#fff;
     --color-cta:#5454d4;
     --colorl-items: #696871;
-}
-
-.price__name{
-    color: var(--color-plan);
-    margin-bottom: 15px;
-    font-weight: 300;
 }
 
 .price__price{
@@ -249,7 +254,15 @@ padding: var(--pading-container);
 }
 
 .testimony{
-    background-color: #1d3f20;
+    background-color: #019b0e;
+}
+
+.testimony .subtitle{
+    color:#fff;
+}
+
+.testimony__review{
+    color:#fff;
 }
 
 .testimony__container{
@@ -292,10 +305,12 @@ padding: var(--pading-container);
 .testimony__arrow{
     width: 90%;
     cursor: pointer;
+    color: #fff;
+    
 }
 
 .testimony__course{
-    background-color: rgb(99, 156, 111);
+    background-color: rgb(0, 161, 35);
     color: #fff;
     display: inline-block;
     padding: 5px;
