--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ padding: var(--pading-container);
 }
 
 .knowledge{
-    background-color: #019b0e; 
+    background-color: #1c834a; 
     background-size: 20px 20px;
   
     overflow: hidden;
@@ -194,68 +194,117 @@ padding: var(--pading-container);
 }
 
 
-.price{
-    text-align: center;
-}
-
-.price__table{
-    padding-top:30px;
-    display:flex;
-    flex-wrap: wrap;
-    gap: 2em;
-    justify-content: space-evenly;
-    align-items: center;
-   
-}
-
-.price__table img{
+.contenido{
+    max-width: 1200px;
     width: 100%;
-    object-fit: cover
+    margin: 40px auto;
+    display: flex;
+}
+.mostrador{
+    width: 100%;
+    transition: .5s ease;
+}
+.mostrador .fila{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 80px;
 }
 
-.price__element{
-
-    background-size: cover;
-    background-position: center;
-    background-color: #e5e5f7;
+.mostrador .fila .item{
+    max-width: 210px;
+    padding: 30px;
+    height: 250px;
+    /*border: 2px solid red;*/
     text-align: center;
-    border-radius: 10px;
-    width: 330px;
-    padding: 40px;
-    --color-plan:#696871;
-    --color-price:#1d293f;
-    --bg-cta:#fff;
-    --color-cta:#5454d4;
-    --colorl-items: #696871;
+    margin: 0 10px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: .3s;
+}
+.mostrador .fila .item:hover{
+    background-color: #e6e6e6;
+}
+.mostrador .fila .item img{
+    width: 100%;
+    margin: 30px 0;
+}
+.mostrador .fila .item .descripcion{
+    color: #707070;
+    font-weight: bold;
+}
+.mostrador .fila .item .precio{
+    color: #1c834a;
+    font-weight: bold;
+    font-size: 20px;
+}
+.seleccion{
+    transition: .5s ease;
+    opacity: 0;
+    width: 0%;
+    border: 1px solid #ccc;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    overflow: hidden;
+}
+.cerrar{
+    position: absolute;
+    right: 0;
+    top: 20px;
+    right: 20px;
+    cursor: pointer;
 }
 
-.price__price{
-    font-size: 2.5rem;
-    color: var(--color-price)
+.info{
+    padding: 20px;
 }
-
-.price__items{
-    margin-top: 35px;
-    display: grid;
-    gap: 1em;
-    font-weight: 300;
-    font-size: 1.2rem;
-    margin-bottom: 50px;
-    color:var(--colorl-items);
-}
-
-.price__cta{
+.info img{
     display: block;
-    padding: 20px 0;
-    border-radius: 10px;
-    text-decoration: none;
-    background-color: var(--bg-cta);
-    font-weight: 600;
-    box-shadow: 0 0 1px rgba(0,0 ,0,1);
+    margin: 30px auto;
+    width: 80%;
+}
+.info h2{
+    color: #707070;
+    margin-bottom: 10px;
+}
+.info p{
+    font-size: 14px;
+    color: #707070;
+    margin-bottom: 10px;
+}
+.info .precio{
+    font-size: 30px;
+    font-weight: bold;
+    color: #1c834a;
+    margin-bottom: 10px;
+    display: block;
+}
+.info .fila{
+    display: flex;
+    align-items: flex-end;
+}
+.info .fila label{
+    display: block;
+    margin-bottom: 10px;
+}
+.info .fila select{
+    width: 100px;
+    font-size: 18px;
+    padding: 6px;
+    margin-right: 30px;
+}
+.info .fila button{
+    height: 40px;
+    border: none;
+    padding: 0 10px;
+    color: #fff;
+    background-color: #1c834a;
 }
 
 .testimony{
-    background-color: #019b0e;
+    background-color: #1c834a;
 }
 
 .testimony .subtitle{
@@ -283,6 +332,7 @@ padding: var(--pading-container);
     grid-row: 1/2;
     opacity: 0;
     pointer-events: none;
+    
 }
 
 .testimony__body--show{
@@ -311,7 +361,7 @@ padding: var(--pading-container);
 }
 
 .testimony__course{
-    background-color: rgb(0, 161, 35);
+    background-color: #1c834a;
     color: #fff;
     display: inline-block;
     padding: 5px;
@@ -336,7 +386,7 @@ padding: var(--pading-container);
     padding: 0;
     transition: padding .2s;
     border-radius: 6px;
-    border:1px solid #1d3f20;
+    border:1px solid #1c834a;
 }
 
 .questions__padding--add{
@@ -391,7 +441,7 @@ padding: var(--pading-container);
 }
 
 .footer{
-    background-color: #1d3f20;
+    background-color: #1c834a;
 }
 
 .footer__title{
@@ -450,7 +500,7 @@ padding: var(--pading-container);
     display: inline-block;
     height: 50px;
     padding: 0 20px;
-    background-color: #2091f9;
+    background-color: rgb(27, 73, 35);
     border: none;
     font-size: 1rem;
     color: #fff;
